2016-03-03  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-multipart-signed.c (g_mime_multipart_signed_verify): Fixed
	a memory leak when verifying S/MIME signatures. Thanks to Minaev Mike for
	discovering this bug.

	Fixes bug #760681

2016-01-13  Jeffrey STedfast  <fejj@gnome.org>

	* gmime/gmime-pkcs7-context.c (key_list_free): Fixed the logic for freeing
	a list of keys. Thanks to foudfou for this patch.

	Fixes bug #760573

2015-10-08  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/internet-address.c (decode_route): Make sure to free the route
	in error cases to avoid a memory leak.

	Fixes bug #756270

2015-04-11  Jeffrey Stedfast  <fejj@gnome.org>

	* util/url-scanner.c (url_scanner_table_init): Treat all character
	values >= 128 as url-safe. Fixes bug #738583.

2014-07-18  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-header.c (g_mime_header_list_register_writer):
	g_hash_table_remove() will g_free() the key for us, so don't do it
	ourselves (will result in a double-free).

2014-07-17  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-table-private.h: Increased GMIME_FOLD_LEN to 78.

2014-05-24  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-part.c (g_mime_part_is_attachment): New function to
	determine if a MIME part is an attachment or not.

	* gmime/gmime-disposition.c (g_mime_content_disposition_is_attachment):
	New function to determine if the Content-Disposition value matches
	"attachment".

2014-02-19  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.20

2014-02-19  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c (parser_scan_content): Improved performance
	by using a SIMD hack when scanning for the end of a line.

2014-02-19  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-message.c (message_remove_header): Don't clear the
	mime_part header stream unless we actually remove a header.
	(message_write_to_stream): Only add nwritten to the total if we've