@@ -1,5 +1,13 @@
 2016-03-03  Jeffrey Stedfast  <fejj@gnome.org>
 
+	* gmime/gmime-utils.c (header_fold_tokens): Fixed folding logic to add a
+	space between two consecutive encoded-word tokens when they will fit on
+	a single line. Thanks to Jaroslav Gratz for discovering this bug.
+
+	Fixes bug #761263
+
+2016-03-03  Jeffrey Stedfast  <fejj@gnome.org>
+
 	* gmime/gmime-multipart-signed.c (g_mime_multipart_signed_verify): Fixed
 	a memory leak when verifying S/MIME signatures. Thanks to Minaev Mike for
 	discovering this bug.
